@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.4.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Re-export `digest` and `scrypt` crates
+
 == {compare-url}/v0.3.1\...v0.4.0[0.4.0] - 2022-11-04
 
 === Added
